--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.solalva.encrypt_card.encrypt_card">
+  <meta-data
+    android:name="flutterEmbedding"
+    android:value="2" />
 </manifest>
