--- a/android/build.gradle
+++ b/android/build.gradle
@@ -41,9 +41,7 @@ android {
 }
 
 dependencies {
-    implementation "com.adyen.checkout:base:2.4.12"
-    implementation "com.adyen.checkout:core:2.4.12"
-    implementation "com.adyen.checkout:core-card:2.4.12"
+    compile 'com.adyen.cse:adyen-cse:1.0.5'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.android.support:support-annotations:28.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
